--- a/app/templates/article.html
+++ b/app/templates/article.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>万人马拉松比赛-即将开幕</title>
+    <title>{{ data.title }}</title>
     <link rel="stylesheet" href={{ url_for('static',filename='css/bootstrap.css') }}>
     <link rel="stylesheet" href={{ url_for('static',filename='css/bootstrap-theme.css') }}>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
@@ -13,9 +13,9 @@
 <div class="col-sm-10">
     <div class="header" style="margin-top: 100px; margin-bottom: 100px">
         <div id="articleheader">
-            <h1 style="font-size: 300%;">万人马拉松比赛-即将开幕</h1>
-            <p style="margin-top: 30px;font-size: 300%;">作者：wfhnjl</p>
-            <p style="text-align: right;font-size: 150%;"> 发布时间：2019-5-1</p>
+            <h1 style="font-size: 300%;">{{ data.title }}</h1>
+            <p style="margin-top: 30px;font-size: 200%;">作者：{{ data.author }}</p>
+            <p style="text-align: right;font-size: 150%;"> 发布时间：{{ data.add_time }}</p>
             <hr>
         </div>
         <div id="articlebody" style="font-size: 200%">
