--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,51 +13,41 @@
         overflow: hidden;
         text-overflow: ellipsis;
         display: -webkit-box;
-        -webkit-line-clamp: 2;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+    }
+    #title {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
         -webkit-box-orient: vertical;
     }
 </style>
 <div class="row">
     <div class="">
-        <img src={{ url_for('static', filename='images/hd_2.jpg') }} alt="" style="width: 100%; height: 450px">
+        <img src="{{ url_for('static', filename='images') }}/hd_4.png" alt="" style="width: 100%; height: 450px">
         {#          <img src={{ url_for('static', filename='images/hd_1.jpg') }} alt="" style="width: 1243px; height: 481px">#}
         {#          <img src={{ url_for('static', filename='images/hd_3.png') }} alt="" style="width: 1243px; height: 481px">#}
         <dl>
-            <dt id="">
-            <div class="row">
-                <div class="col-sm-1"></div>
-                <div id="zx_1" class="col-sm-10" style="margin-top: 100px">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <img src={{ url_for('static', filename='images/hd_3.png') }} alt=""
-                                 style="width: 100%; height: 100%">
-                        </div>
-                        <div class="col-sm-7">
-                            <h2>万人马拉松比赛-即将开幕</h2>
-                            <p id='text1'   >2019环万佛湖国际马拉松赛将于2019年5月26日（星期日）在舒城万佛湖举行，赛事设马拉松、半程
-                                马拉松、迷你马拉松、亲子马拉松共4个组别，比赛正在报名中！5月26日，相约舒城万佛湖！ </p></div>
-                    </div>
-                </div>
-            </div>
-            </dt>
-            <dt id="">
-            <div class="row">
-                <div class="col-sm-1"></div>
-                <div id="zx_1" class="col-sm-10" style="margin-top: 100px; margin-bottom: 150px">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <img src={{ url_for('static', filename='images/hd_3.png') }} alt=""
-                                 style="width: 100%; height: 100%">
-                        </div>
-                        <div class="col-sm-7">
-                            <h2>万人马拉松比赛-即将开幕</h2>
-                            <p>2019环万佛湖国际马拉松赛将于2019年5月26日（星期日）在舒城万佛湖举行，赛事设马拉松、半程
-                                马拉松、迷你马拉松、亲子马拉松共4个组别，比赛正在报名中！5月26日，相约舒城万佛湖！ </p>
+            {% for article in articles %}
+                <dt>
+                <div class="row article">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-10" style="margin-top: 100px">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <img src="{{ url_for('static', filename='images') }}/{{ article.banner }}" alt=""
+                                     style="width: 100%; height: 100%">
+                            </div>
+                            <div class="col-sm-7">
+                                <a href="{{ url_for('main.article',uid=article.id) }}"><h2 id="title">{{ article.title }}</h2></a>
+                                <p id='text1'>{{ article.content }} </p></div>
                         </div>
                     </div>
                 </div>
-            </div>
-            </dt>
+                </dt>
+            {% endfor %}
         </dl>
     </div>
 </div>
@@ -65,17 +55,15 @@
     <nav aria-label="Page navigation">
         <ul class="pagination">
             <li>
-                <a href="#" aria-label="Previous">
+                <a href="{{ url_for('main.index', page = pagination.page - 1) }}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            {% for i in pagination.iter_pages() %}
+                <li><a href="{{ url_for('main.index', page=i ) }}">{{ i }}</a></li>
+            {% endfor %}
             <li>
-                <a href="#" aria-label="Next">
+                <a href="{{ url_for('main.index', page = pagination.page + 1) }}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
@@ -84,5 +72,8 @@
 </div>
 
 <script src={{ url_for('static', filename='js/bootstrap.js') }}></script>
+<script>
+
+</script>
 </body>
 </html>
