--- a/app/templates/admin/admin_products.html
+++ b/app/templates/admin/admin_products.html
@@ -90,16 +90,17 @@
              <div class="widget-box">
                 <div class="widget-title"> <span class="icon"> <i class="icon-th"></i> </span>
                   <h5>商品列表</h5>
-                  <span class="label label-info">Featured</span> </div>
+                  <span class="btn btn-primary btn-mini" style="float: right;margin-top: 7px;margin-right: 5px">添加</span> </div>
                 <div class="widget-content ">
                   <table class="table table-bordered table-striped with-check">
                     <thead>
                       <tr>
                         <th><input type="checkbox" id="title-table-checkbox" name="title-table-checkbox" /></th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
+                        <th>图片</th>
+                        <th>名称</th>
+                        <th>库存</th>
+                        <th>状态</th>
+                        <th>操作</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -109,6 +110,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -116,6 +118,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -123,6 +126,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -130,6 +134,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -137,6 +142,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -144,6 +150,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                     </tbody>
                   </table>
@@ -160,10 +167,10 @@
                     <thead>
                       <tr>
                         <th><input type="checkbox" id="title-table-checkbox" name="title-table-checkbox" /></th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
+                        <th>编号</th>
+                        <th>分类名</th>
+                        <th>排序</th>
+                        <th>操作</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -224,10 +231,11 @@
                     <thead>
                       <tr>
                         <th><input type="checkbox" id="title-table-checkbox" name="title-table-checkbox" /></th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
-                        <th>Column name</th>
+                        <th>购买商品</th>
+                        <th>客户信息</th>
+                        <th>支付价格</th>
+                        <th>订单状态</th>
+                        <th>操作</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -237,6 +245,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -244,6 +253,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -251,6 +261,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -258,6 +269,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -265,6 +277,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                       <tr>
                         <td><input type="checkbox" /></td>
@@ -272,6 +285,7 @@
                         <td>Row 2</td>
                         <td>Row 3</td>
                         <td>Row 4</td>
+                        <td>Row 5</td>
                       </tr>
                     </tbody>
                   </table>
