--- a/app/templates/wap/wap_home.html
+++ b/app/templates/wap/wap_home.html
@@ -1,84 +1,137 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="utf-8"> 
-	<title>Bootstrap 实例 - 简单的轮播（Carousel）插件</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<style>
-	.hdimg{
-		width: 100%;
-		height: 375px;
-	}
-	.classmate{
-		margin-top:40px;
-		margin-bottom: 40px;
-		height: auto
-	}
-	.line{
-    margin-top: 100px;
-    width: 100%;
-    border-bottom: 20px solid #D0D0D0;
-    }
+		.class_content{
+			text-align: center;
+			display: inline-block;
+			width: 24%;
+			margin: 10px auto;
+			}
+		.line{
+			height: 3px;
+			background-color: #F3F3F3; 
+		}
+		.goods_list{
+			height: 114px;
+			margin-top: 10px;
+		}
+		.good_img{
+			width:30%;
+		   	height: 0;
+		    padding-bottom: 20%;
+		    margin-left: 3%;
+		    overflow:hidden;
+		    background-position: center center;
+		    background-repeat: no-repeat;
+		    -webkit-background-size:cover;
+		    -moz-background-size:cover;
+		    background-size:cover;
+		}
+		.good_content .title{
+			font-family: PingFangSC-Regular,sans-serif;
+			width: 100%;
+			font-size: 18px;
+			color: #3C3C3C;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			word-break: break-all;
+		}
+		.good_content .content{
+			font-family: PingFangSC-Regular,sans-serif;
+			color: #6C6C6C;
+			height: 60%;
+			width: 100%;
+			font-size: 12px;
+			margin: 0;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+		}
+		.good_content .price{
+			font-family: PingFangSC-Regular,sans-serif;
+			color: red;
+		}
 	</style>
 </head>
 <body>
-<div id="myCarousel" class="carousel slide hdimg">
-	<!-- 轮播（Carousel）指标 -->
-	<ol class="carousel-indicators">
-		<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-		<li data-target="#myCarousel" data-slide-to="1"></li>
-		<li data-target="#myCarousel" data-slide-to="2"></li>
-	</ol>   
-	<!-- 轮播（Carousel）项目 -->
-	<dl class="carousel-inner">
-		<dt class="item active">
-			<img style="width:100%;height:375px" src="img/wfh/hd_1.png" alt="First slide">
-		</dt>
-		<dt class="item">
-			<img style="width:100%;height:375px" src="img/wfh/hd_2.png" alt="Second slide">
-		</dt>
-		<dt class="item">
-			<img style="width:100%;height:375px" src="img/wfh/hd_3.png" alt="Third slide">
-		</dt>
-	</dl>
-</div>
-<div class="classmate">
-	<dl>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px" />
- 		 	<p style="font-size:35px; text-align:center">茶叶直销</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">水产家禽</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">农副产品</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">腌制干货</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px" />
- 		 	<p style="font-size:35px; text-align:center">茶叶直销</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">水产家禽</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">农副产品</p>
-		</dt>
-		<dt id="" class="col-xs-3" style="margin-bottom: 20px">
-			<img alt="140x140" src="img/demo/av4.jpg" class="img-rounded" style="margin-left:65px; text-align:center" />
- 		 	<p style="font-size:35px; text-align:center">腌制干货</p>
-		</dt>
-	</dl>
+	<!--# 幻灯片-->
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	  <!-- Indicators -->
+	  <ol class="carousel-indicators" style="margin-bottom: 0">
+	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	  </ol>
+
+	  <!-- Wrapper for slides -->
+	  <div class="carousel-inner" role="listbox">
+	    <div class="item active">
+	      <img src="./wfh/hd_1.png" alt="...">
+	      <div class="carousel-caption">
+	        ...
+	      </div>
+	    </div>
+	    <div class="item">
+	      <img src="./wfh/hd_2.png" alt="...">
+	      <div class="carousel-caption">
+	        ...
+	      </div>
+	    </div>
+	  </div>
+	</div>
+ 
+ 	<!--# 分类列表-->
+	<div class="classification">
+		<div id="1" class="class_content">
+			<span>
+				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>
+		<div id="1" class="class_content">
+			<span>
+				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>
+		<div id="1" class="class_content">
+			<span>
+				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>
+		<div id="1" class="class_content">
+			<span>
+				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>	
+	</div>
 	<div class="line"></div>
-</div>
+
+	<!--# 商品列表-->
+	<div class="goods_list">
+		<div class="col-xs-4 img-rounded good_img" style="background-image:url(./wfh/hd_2.png)"></div>
+		<div class="col-xs-8 good_content">
+			<div class="title">万佛湖野生胖头鱼</div>
+			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
+			<div class="price">￥152</div>
+		</div>
+
+	</div>
 </body>
 </html>
