--- a/app/templates/wap/wap_home.html
+++ b/app/templates/wap/wap_home.html
@@ -3,65 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<style>
-		.class_content{
-			text-align: center;
-			display: inline-block;
-			width: 24%;
-			margin: 10px auto;
-			}
-		.line{
-			height: 3px;
-			background-color: #F3F3F3; 
-		}
-		.goods_list{
-			height: 114px;
-			margin-top: 10px;
-		}
-		.good_img{
-			width:30%;
-		   	height: 0;
-		    padding-bottom: 20%;
-		    margin-left: 3%;
-		    overflow:hidden;
-		    background-position: center center;
-		    background-repeat: no-repeat;
-		    -webkit-background-size:cover;
-		    -moz-background-size:cover;
-		    background-size:cover;
-		}
-		.good_content .title{
-			font-family: PingFangSC-Regular,sans-serif;
-			width: 100%;
-			font-size: 18px;
-			color: #3C3C3C;
-			white-space: nowrap;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			word-break: break-all;
-		}
-		.good_content .content{
-			font-family: PingFangSC-Regular,sans-serif;
-			color: #6C6C6C;
-			height: 60%;
-			width: 100%;
-			font-size: 12px;
-			margin: 0;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			display: -webkit-box;
-			-webkit-line-clamp: 2;
-			-webkit-box-orient: vertical;
-		}
-		.good_content .price{
-			font-family: PingFangSC-Regular,sans-serif;
-			color: red;
-		}
-	</style>
+	<link rel="stylesheet" href="{{url_for('static',filename='css/wap-home.css')}}">
 </head>
 <body>
 	<!--# 幻灯片-->
@@ -76,62 +22,101 @@
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner" role="listbox">
 	    <div class="item active">
-	      <img src="./wfh/hd_1.png" alt="...">
+	      <img src="{{url_for('static',filename='img/wfh/hd_1.png') }}" alt="..." style="width: 100%">
 	      <div class="carousel-caption">
 	        ...
 	      </div>
 	    </div>
 	    <div class="item">
-	      <img src="./wfh/hd_2.png" alt="...">
+	      <img src="{{url_for('static',filename='img/wfh/hd_2.png') }}" alt="...">
 	      <div class="carousel-caption">
 	        ...
 	      </div>
 	    </div>
 	  </div>
 	</div>
- 
+
  	<!--# 分类列表-->
 	<div class="classification">
-		<div id="1" class="class_content">
+		<div id="1" class="classification_content">
 			<span>
-				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
 				<br>
 				<b>茶叶</b>
 			</span>
 		</div>
-		<div id="1" class="class_content">
+		<div id="2" class="classification_content">
 			<span>
-				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
 				<br>
 				<b>茶叶</b>
 			</span>
 		</div>
-		<div id="1" class="class_content">
+		<div id="3" class="classification_content">
 			<span>
-				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
 				<br>
 				<b>茶叶</b>
 			</span>
 		</div>
-		<div id="1" class="class_content">
+		<div id="4" class="classification_content">
 			<span>
-				<img src="./wfh/teaage.png" alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
 				<br>
 				<b>茶叶</b>
 			</span>
-		</div>	
+		</div>
+		<div id="5" class="classification_content">
+			<span>
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>
+		<div id="6" class="classification_content">
+			<span>
+				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<br>
+				<b>茶叶</b>
+			</span>
+		</div>
 	</div>
 	<div class="line"></div>
 
 	<!--# 商品列表-->
 	<div class="goods_list">
-		<div class="col-xs-4 img-rounded good_img" style="background-image:url(./wfh/hd_2.png)"></div>
+		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
 		<div class="col-xs-8 good_content">
 			<div class="title">万佛湖野生胖头鱼</div>
 			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
 			<div class="price">￥152</div>
 		</div>
-
 	</div>
+	<div class="goods_list">
+		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
+		<div class="col-xs-8 good_content">
+			<div class="title">万佛湖野生胖头鱼</div>
+			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
+			<div class="price">￥152</div>
+		</div>
+	</div>
+	<div class="goods_list">
+		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
+		<div class="col-xs-8 good_content">
+			<div class="title">万佛湖野生胖头鱼</div>
+			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
+			<div class="price">￥152</div>
+		</div>
+	</div>
+	<div class="goods_list">
+		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
+		<div class="col-xs-8 good_content">
+			<div class="title">万佛湖野生胖头鱼</div>
+			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
+			<div class="price">￥152</div>
+		</div>
+	</div>
+	
+
 </body>
 </html>
