--- a/app/templates/wap/wap_home.html
+++ b/app/templates/wap/wap_home.html
@@ -28,7 +28,7 @@
 	      </div>
 	    </div>
 	    <div class="item">
-	      <img src="{{url_for('static',filename='img/wfh/hd_2.png') }}" alt="...">
+	      <img src="{{url_for('static',filename='img/wfh/hd_2.png') }}" alt="..." style="width: 100%">
 	      <div class="carousel-caption">
 
 	      </div>
@@ -40,44 +40,44 @@
 	<div class="classification">
 		<div id="1" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/shuichan.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
+				<b>万佛水产</b>
 			</span>
 		</div>
 		<div id="2" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/jiaqin.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
+				<b>农家禽类</b>
 			</span>
 		</div>
 		<div id="3" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/tea.png') }} " alt="" style=" height: 45px">
 				<br>
 				<b>茶叶</b>
 			</span>
 		</div>
 		<div id="4" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/Bean.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
+				<b>豆腐制品</b>
 			</span>
 		</div>
 		<div id="5" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/chestnut.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
+				<b>板栗</b>
 			</span>
 		</div>
 		<div id="6" class="classification_content">
 			<span>
-				<img src="{{url_for('static',filename='img/wfh/teaage.png') }} " alt="" style=" height: 45px">
+				<img src="{{url_for('static',filename='img/wfh/vegetable_fruit.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
+				<b>农家蔬果</b>
 			</span>
 		</div>
 	</div>
@@ -100,6 +100,20 @@
 			<div class="price">￥152</div>
 		</div>
 	</div>
-
+	<!-- # 底部导航-->
+	<div class="main_nav_bottom">
+                <nav class="navbar navbar-default navbar-fixed-bottom">
+                    <div class="container" align="center">
+						<div class="row" align="center">
+							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
+								<br>万佛好货</div>
+							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
+								<br>本地资源</div>
+							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
+								<br>个人中心</div>
+						</div>
+                    </div>
+                </nav>
+            </div>
 </body>
 </html>
