--- a/app/static/css/wap-home.css
+++ b/app/static/css/wap-home.css
@@ -1,66 +1,98 @@
 
-.classification_content{
-	text-align: center;
-	display: inline-block;
-	width: 24%;
-	margin: 10px auto;
-	}
-.line{
-	height: 3px;
-	background-color: #F3F3F3;
+.classification_content {
+    text-align: center;
+    display: inline-block;
+    width: 24%;
+    margin: 10px auto;
 }
-.goods_list{
-	width: 100%;
-	margin-top: 10px;
-	display: inline-block;
+.product_box{
+    margin-bottom: 10vh;
 }
-.good_img{
-	width:30%;
-	height: 0;
-	padding-bottom: 20%;
-	margin-left: 3%;
-	display: inline-block;
-	overflow:hidden;
-	background-position: center center;
-	background-repeat: no-repeat;
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	background-size:cover;
+
+.line {
+    height: 5px;
+    background-color: #F3F3F3;
 }
-.good_content .title{
-	font-family: PingFangSC-Regular,sans-serif;
-	width: 100%;
-	font-size: 4vw;
-	color: #3C3C3C;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-	word-break: break-all;
+
+.goods_list {
+    width: 100%;
+    margin-top: 2vh;
+    display: inline-block;
 }
-.good_content .content{
-	font-family: PingFangSC-Regular,sans-serif;
-	color: #6C6C6C;
-	width: 100%;
-	font-size: 2vw;
-	margin: 0;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 2;
-	-webkit-box-orient: vertical;
+
+.good_img {
+    width: 30%;
+    height: 0;
+    padding-bottom: 20%;
+    margin-left: 3%;
+    display: inline-block;
+    overflow: hidden;
+    background-position: center center;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
 }
-.good_content .price{
-	display: inline-block;
-	font-size: 3vw;
-	font-family: PingFangSC-Regular,sans-serif;
-	color: red;
-	position: relative;
+
+.good_content .title {
+    font-family: PingFangSC-Regular, sans-serif;
+    width: 100%;
+    font-size: 4vw;
+    color: #3C3C3C;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    word-break: break-all;
 }
+
+.good_content .content {
+    font-family: PingFangSC-Regular, sans-serif;
+    color: #6C6C6C;
+    width: 100%;
+    font-size: 3vw;
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.good_content .price {
+    display: inline-block;
+    font-size: 4vw;
+    font-family: PingFangSC-Regular, sans-serif;
+    color: #fb7a2c;
+    position: relative;
+}
+
 .nav-tabs {
-	text-align: center;
-	height: 40px;
-	line-height: 40px;
+    text-align: center;
+    height: 40px;
+    line-height: 40px;
 }
-.navigation{
-	font-size: 2vw;
+
+.navigation {
+    font-size: 2vw;
+}
+
+.product_img img {
+    width: 96%;
+    height: 25vh;
+    border-radius: 10px;
+    margin-left: 2vw;
+    margin-top: 2vh;
+}
+
+.product_name {
+    color: #1b1b1b;
+    font-size: 5vw;
+    margin-top: 5px;
+    margin-left: 2vw;
+}
+
+.product_price .trueprice {
+    font-size: 5vw;
+    margin-left: 1vw;
+    color: #fb7a2c;
 }
