--- a/app/templates/wap/wap_home.html
+++ b/app/templates/wap/wap_home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>万佛湖人家-AAAAA风景区农家特色产品</title>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
 	<!--# 幻灯片-->
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
-	  <ol class="carousel-indicators" style="margin-bottom: 0">
+    	  <ol class="carousel-indicators" style="margin-bottom: 0">
 	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
@@ -38,82 +38,110 @@
 
  	<!--# 分类列表-->
 	<div class="classification">
-		<div id="1" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=1)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/shuichan.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>万佛水产</b>
-			</span>
+				<b style="color: grey">万佛水产</b>
+			</a>
 		</div>
-		<div id="2" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=2)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/jiaqin.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>农家禽类</b>
-			</span>
+				<b style="color: grey">农家禽类</b>
+			</a>
 		</div>
-		<div id="3" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=3)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/tea.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>茶叶</b>
-			</span>
+				<b style="color: grey">茶叶</b>
+			</a>
 		</div>
-		<div id="4" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=4)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/Bean.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>豆腐制品</b>
-			</span>
+				<b style="color: grey">豆腐制品</b>
+			</a>
 		</div>
-		<div id="5" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=5)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/chestnut.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>板栗</b>
-			</span>
+				<b style="color: grey">板栗</b>
+			</a>
 		</div>
-		<div id="6" class="classification_content">
-			<span>
+		<div class="classification_content">
+			<a href="{{url_for('home.category',id=6)}}" style="text-decoration:none;">
 				<img src="{{url_for('static',filename='img/wfh/vegetable_fruit.png') }} " alt="" style=" height: 45px">
 				<br>
-				<b>农家蔬果</b>
-			</span>
+				<b style="color: grey">农家蔬果</b>
+			</a>
 		</div>
 	</div>
 	<div class="line"></div>
 
+
+
 	<!--# 商品列表-->
-	<div class="goods_list">
-		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
-		<div class="col-xs-8 good_content">
-			<div class="title">万佛湖野生胖头鱼</div>
-			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
-			<div class="price">￥152</div>
+	<div class="product_list">
+		<a href="{{url_for('home.detail',id=0)}}" style="text-decoration:none;">
+		<div class="product_img"><img src="{{url_for('static',filename='img/wfh/fish1.jpg') }}" alt=""></div>
+		<div class="product_name"><strong>这是商品名称</strong></div>
+		<div class="product_price">
+			<span class="trueprice">￥8</span>
+			<span style="color: #1a1a1a;text-decoration:line-through">￥10</span>
 		</div>
+		</a>
 	</div>
-	<div class="goods_list">
-		<div class="col-xs-4 img-rounded good_img" style="background-image:url({{url_for('static',filename='img/wfh/hd_2.png')}})"></div>
-		<div class="col-xs-8 good_content">
-			<div class="title">万佛湖野生胖头鱼</div>
-			<div class="content">当天捕捞，新鲜送达，吃的就是这口新鲜味道，万佛湖野生味道。</div>
-			<div class="price">￥152</div>
+	<div class="product_list">
+		<a href="{{url_for('home.detail',id=0)}}" style="text-decoration:none;">
+		<div class="product_img"><img src="{{url_for('static',filename='img/wfh/fish2.jpg') }}" alt=""></div>
+		<div class="product_name"><strong>这是商品名称</strong></div>
+		<div class="product_price">
+			<span class="trueprice">￥8</span>
+			<span style="color: #1a1a1a;text-decoration:line-through">￥10</span>
 		</div>
+		</a>
 	</div>
+	<div class="product_list">
+		<a href="{{url_for('home.detail',id=0)}}" style="text-decoration:none;">
+		<div class="product_img"><img src="{{url_for('static',filename='img/wfh/hd_1.png') }}" alt=""></div>
+		<div class="product_name"><strong>这是商品名称</strong></div>
+		<div class="product_price">
+			<span class="trueprice">￥8</span>
+			<span style="color: #1a1a1a;text-decoration:line-through">￥10</span>
+		</div>
+		</a>
+	</div>
+	</div>
+
 	<!-- # 底部导航-->
-	<div class="main_nav_bottom">
-                <nav class="navbar navbar-default navbar-fixed-bottom">
-                    <div class="container" align="center">
-						<div class="row" align="center">
-							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
-								<br>万佛好货</div>
-							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
-								<br>本地资源</div>
-							<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 50%">
-								<br>个人中心</div>
-						</div>
-                    </div>
-                </nav>
-            </div>
+	<div class="main_nav_bottom" style="margin-top: 10vh">
+		<nav class="navbar navbar-default navbar-fixed-bottom">
+			<div class="container" align="center">
+				<div class="row" align="center">
+					<a href="{{url_for('home.index')}}" style="text-decoration:none;" >
+					<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/store.png')}}" style="width: 8vw">
+						<br><p style="color: grey">万佛好货</p></div>
+					</a>
+					<a href="{{url_for('home.local')}}" style="text-decoration:none;">
+					<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/local.png')}}" style="width: 8vw">
+						<br><p style="color: grey">本地资源</p></div>
+					</a>
+					<a href="{{url_for('home.Personal')}}" style="text-decoration:none;">
+					<div class="col-md-4 col-sm-4 col-xs-4 navigation" align="center"><img src="{{url_for('static',filename='img/wfh/geren.png')}}" style="width: 8vw">
+						<br><p style="color: grey">个人中心</p></div>
+					</a>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+<scrpit>
+
+</scrpit>
 </body>
 </html>
